# map_range_int

./: Cargo.toml  changes.md  readme.md
src/: lib.rs
tests/: test_16_8.rs  test_8_16.rs  test_boundary.rs  test_f_16.rs  test_i8_u8.rs  test_oob.rs  test_range_op.rs  test_scale_u8.rs  test_time_16.rs  test_time_32.rs  test_time_32_16.rs  test_time_32_16_unchecked.rs  test_time_64.rs  test_time_8.rs  test_time_f64.rs  test_time_f64_unchecked.rs
